// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Signup /> Rendering: should redirect if user is already logged in 1`] = `
<Redirect
  push={false}
  to="/addEvent"
/>
`;

exports[`<Signup /> Rendering: should render correctly on page load 1`] = `
<div
  id="sign-up-container"
>
  <TopNav />
  <div
    className="d-flex flex-column align-items-center main-content"
  >
    <LoadingIcon
      size={3}
      start={false}
    />
    <div
      className="card card-form"
    >
      <h1
        className="card-header"
      >
        Sign up
      </h1>
      <div
        className="card-body"
      >
        <BigAlert
          message={null}
        />
        <form>
          <div
            className="form-group"
          >
            <label
              htmlFor="name"
            >
              Name
            </label>
            <div
              className="input-group"
            >
              <div
                className="input-group-addon"
              >
                <i
                  className="fa fa-user"
                />
              </div>
              <input
                className="form-control"
                id="name"
                name="name"
                onChange={[Function]}
                placeholder="Name"
                type="text"
              />
            </div>
            <small
              className="form-text text-muted"
            >
              Can contain letters and numbers alone
            </small>
            <SmallAlert
              message={null}
            />
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="email"
            >
              Email
            </label>
            <div
              className="input-group"
            >
              <div
                className="input-group-addon"
              >
                <i
                  className="fa fa-envelope"
                />
              </div>
              <input
                className="form-control"
                id="email"
                name="email"
                onChange={[Function]}
                placeholder="Your Email"
                type="email"
              />
            </div>
            <SmallAlert
              message={null}
            />
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="password"
            >
              Password
            </label>
            <div
              className="input-group"
            >
              <div
                className="input-group-addon"
              >
                <i
                  className="fa fa-user-secret"
                />
              </div>
              <input
                className="form-control"
                id="password"
                name="password"
                onChange={[Function]}
                placeholder="Password"
                type="password"
              />
            </div>
            <small
              className="form-text text-muted"
            >
              Must contain capital, small letters and numbers
            </small>
            <SmallAlert
              message={null}
            />
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="password"
            >
              Confirm Password
            </label>
            <div
              className="input-group"
            >
              <div
                className="input-group-addon"
              >
                <i
                  className="fa fa-user-secret"
                />
              </div>
              <input
                className="form-control"
                id="confirm-password"
                name="confirmPassword"
                onChange={[Function]}
                placeholder="Confirm Password"
                type="password"
              />
            </div>
            <SmallAlert
              message={null}
            />
          </div>
          <button
            className="btn btn-block dark-button text-white mt-4"
            disabled={false}
            onClick={[Function]}
          >
            Register
          </button>
        </form>
      </div>
    </div>
    <Footer />
  </div>
</div>
`;

exports[`<Signup /> Rendering: should render correctly when registering a user 1`] = `
<div
  id="sign-up-container"
>
  <TopNav />
  <div
    className="d-flex flex-column align-items-center main-content"
  >
    <LoadingIcon
      size={3}
      start={true}
    />
    <div
      className="card card-form"
    >
      <h1
        className="card-header"
      >
        Sign up
      </h1>
      <div
        className="card-body"
      >
        <BigAlert
          message={null}
        />
        <form>
          <div
            className="form-group"
          >
            <label
              htmlFor="name"
            >
              Name
            </label>
            <div
              className="input-group"
            >
              <div
                className="input-group-addon"
              >
                <i
                  className="fa fa-user"
                />
              </div>
              <input
                className="form-control"
                id="name"
                name="name"
                onChange={[Function]}
                placeholder="Name"
                type="text"
              />
            </div>
            <small
              className="form-text text-muted"
            >
              Can contain letters and numbers alone
            </small>
            <SmallAlert
              message={null}
            />
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="email"
            >
              Email
            </label>
            <div
              className="input-group"
            >
              <div
                className="input-group-addon"
              >
                <i
                  className="fa fa-envelope"
                />
              </div>
              <input
                className="form-control"
                id="email"
                name="email"
                onChange={[Function]}
                placeholder="Your Email"
                type="email"
              />
            </div>
            <SmallAlert
              message={null}
            />
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="password"
            >
              Password
            </label>
            <div
              className="input-group"
            >
              <div
                className="input-group-addon"
              >
                <i
                  className="fa fa-user-secret"
                />
              </div>
              <input
                className="form-control"
                id="password"
                name="password"
                onChange={[Function]}
                placeholder="Password"
                type="password"
              />
            </div>
            <small
              className="form-text text-muted"
            >
              Must contain capital, small letters and numbers
            </small>
            <SmallAlert
              message={null}
            />
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="password"
            >
              Confirm Password
            </label>
            <div
              className="input-group"
            >
              <div
                className="input-group-addon"
              >
                <i
                  className="fa fa-user-secret"
                />
              </div>
              <input
                className="form-control"
                id="confirm-password"
                name="confirmPassword"
                onChange={[Function]}
                placeholder="Confirm Password"
                type="password"
              />
            </div>
            <SmallAlert
              message={null}
            />
          </div>
          <button
            className="btn btn-block dark-button text-white mt-4"
            disabled={true}
            onClick={[Function]}
          >
            Register
          </button>
        </form>
      </div>
    </div>
    <Footer />
  </div>
</div>
`;

exports[`<Signup /> Rendering: should render correctly when there is an error 1`] = `
<div
  id="sign-up-container"
>
  <TopNav />
  <div
    className="d-flex flex-column align-items-center main-content"
  >
    <LoadingIcon
      size={3}
      start={false}
    />
    <div
      className="card card-form"
    >
      <h1
        className="card-header"
      >
        Sign up
      </h1>
      <div
        className="card-body"
      >
        <BigAlert />
        <form>
          <div
            className="form-group"
          >
            <label
              htmlFor="name"
            >
              Name
            </label>
            <div
              className="input-group"
            >
              <div
                className="input-group-addon"
              >
                <i
                  className="fa fa-user"
                />
              </div>
              <input
                className="form-control"
                id="name"
                name="name"
                onChange={[Function]}
                placeholder="Name"
                type="text"
              />
            </div>
            <small
              className="form-text text-muted"
            >
              Can contain letters and numbers alone
            </small>
            <SmallAlert
              message={null}
            />
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="email"
            >
              Email
            </label>
            <div
              className="input-group"
            >
              <div
                className="input-group-addon"
              >
                <i
                  className="fa fa-envelope"
                />
              </div>
              <input
                className="form-control"
                id="email"
                name="email"
                onChange={[Function]}
                placeholder="Your Email"
                type="email"
              />
            </div>
            <SmallAlert
              message={null}
            />
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="password"
            >
              Password
            </label>
            <div
              className="input-group"
            >
              <div
                className="input-group-addon"
              >
                <i
                  className="fa fa-user-secret"
                />
              </div>
              <input
                className="form-control"
                id="password"
                name="password"
                onChange={[Function]}
                placeholder="Password"
                type="password"
              />
            </div>
            <small
              className="form-text text-muted"
            >
              Must contain capital, small letters and numbers
            </small>
            <SmallAlert
              message={null}
            />
          </div>
          <div
            className="form-group"
          >
            <label
              htmlFor="password"
            >
              Confirm Password
            </label>
            <div
              className="input-group"
            >
              <div
                className="input-group-addon"
              >
                <i
                  className="fa fa-user-secret"
                />
              </div>
              <input
                className="form-control"
                id="confirm-password"
                name="confirmPassword"
                onChange={[Function]}
                placeholder="Confirm Password"
                type="password"
              />
            </div>
            <SmallAlert
              message={null}
            />
          </div>
          <button
            className="btn btn-block dark-button text-white mt-4"
            disabled={false}
            onClick={[Function]}
          >
            Register
          </button>
        </form>
      </div>
    </div>
    <Footer />
  </div>
</div>
`;
